fix(link-button): change icon color in contrast mode

--- a/packages/components/src/link-button/LinkButton.module.css
+++ b/packages/components/src/link-button/LinkButton.module.css
@@ -56,6 +56,10 @@
 
   .icon {
     color: var(--midas-icon-tertiary);
+
+    @media (forced-colors: active) {
+      color: LinkText;
+    }
   }
 
   &[data-hovered]:not(:disabled, [data-disabled]),
